[package]
name = "http2server"
version = "0.1.0"
authors = ["teruya ono <27873650+teru01@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
h2 = "0.3"
http = "0.2"
tokio = { version = "1", features = ["full"] }
bytes = "1"
